Add updated build.gradle with information for connecting to SonarQube

--- a/build.gradle
+++ b/build.gradle
@@ -103,10 +103,10 @@ pmd {
 
 sonarRunner {
     sonarProperties {
-        property "sonar.host.url", "http://<YOUR_SONAR_DNS>:9000"
-        property "sonar.username", "<YOUR_ADMIN_USERNAME> should be admin by default"
-        property "sonar.password", "<YOUR_ADMIN_PASSWORD> should be admin by default"
-        property "sonar.jdbc.url", "jdbc:mysql://<YOUR MYSQL DNS>:3306/sonar?useUnicode=true&characterEncoding=utf8&rewriteBatchedStatements=true&useConfigs=maxPerformance"
+        property "sonar.host.url", "http://ec2-54-172-94-100.compute-1.amazonaws.com:9000"
+        property "sonar.username", "admin"
+        property "sonar.password", "admin"
+        property "sonar.jdbc.url", "jdbc:mysql://http://ec2-54-172-94-100.compute-1.amazonaws.com:3306/sonar?useUnicode=true&characterEncoding=utf8&rewriteBatchedStatements=true&useConfigs=maxPerformance"
         property "sonar.jdbc.driverClassName", "com.mysql.jdbc.Driver"
         property "sonar.jdbc.username", "sonarqube"
         property "sonar.jdbc.password", "coveros1"
