Updated url for nexus

--- a/build.gradle
+++ b/build.gradle
@@ -85,7 +85,7 @@ uploadArchives {
             }
           
             // change to point to your repo, e.g. http://my.org/repo
-            url "http://ec2-54-210-118-101.compute-1.amazonaws.com:8081/nexus/content/repositories/snapshots"
+            url "http://http://ec2-54-172-94-100.compute-1.amazonaws.com:8081/nexus/content/repositories/snapshots"
       }
     }
 }
