update Nexus URL

--- a/build.gradle
+++ b/build.gradle
@@ -88,7 +88,7 @@ uploadArchives {
             }
           
             // change to point to your repo, e.g. http://my.org/repo
-            url "http://http://ec2-54-165-125-104.compute-1.amazonaws.com:8081/nexus/content/repositories/snapshots"
+            url "http://ec2-54-165-125-104.compute-1.amazonaws.com:8081/nexus/content/repositories/snapshots"
       }
     }
 }
