--- a/build.gradle
+++ b/build.gradle
@@ -107,7 +107,7 @@ pmd {
 
 sonarRunner {
     sonarProperties {
-        property "sonar.host.url", "ec2-52-91-135-116.compute-1.amazonaws.com:9000"
+        property "sonar.host.url", "http://ec2-52-91-135-116.compute-1.amazonaws.com:9000"
         property "sonar.username", "sonaruser"
         property "sonar.password", "picklecucumber"
         property "sonar.jdbc.url", "jdbc:mysql://http://ec2-52-91-135-116.compute-1.amazonaws.com:3306/sonar?useUnicode=true&characterEncoding=utf8&rewriteBatchedStatements=true&useConfigs=maxPerformance"
