--- a/build.gradle
+++ b/build.gradle
@@ -88,7 +88,7 @@ uploadArchives {
             }
           
             // change to point to your repo, e.g. http://my.org/repo
-            url "http://ec2-52-91-135-116.compute-1.amazonaws.com:8081/nexus/content/repositories/snapshots"
+            url "http://172.31.2.114:8081/nexus/content/repositories/snapshots"
       }
     }
 }
@@ -107,10 +107,10 @@ pmd {
 
 sonarRunner {
     sonarProperties {
-        property "sonar.host.url", "http://ec2-52-91-135-116.compute-1.amazonaws.com:9000"
+        property "sonar.host.url", "http://172.31.2.114:9000"
         property "sonar.username", "sonaruser"
         property "sonar.password", "picklecucumber"
-        property "sonar.jdbc.url", "jdbc:mysql://http://ec2-52-91-135-116.compute-1.amazonaws.com:3306/sonar?useUnicode=true&characterEncoding=utf8&rewriteBatchedStatements=true&useConfigs=maxPerformance"
+        property "sonar.jdbc.url", "jdbc:mysql://http://172.31.2.114:3306/sonar?useUnicode=true&characterEncoding=utf8&rewriteBatchedStatements=true&useConfigs=maxPerformance"
         property "sonar.jdbc.driverClassName", "com.mysql.jdbc.Driver"
         property "sonar.jdbc.username", "sonarqube"
         property "sonar.jdbc.password", "coveros1"
